--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,5 +27,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-#        run: bash -c 'docker build -f Dockerfile .'
-        run: whoami
+        run: docker build -f Dockerfile .
